force-app/main/default/objects/cgcloud__User_Document_Template__c/cgcloud__User_Document_Template__c.object-meta.xml
<CustomObject>
    <description>Holds the details of the daily report template, to be used for daily reports.</description>
    <label>Daily Report Template</label>
    <nameField>
        <displayFormat>DRT-{000000}</displayFormat>
        <label>Daily Report Template Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Daily Report Templates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>