force-app/main/default/objects/cgcloud__User_Document_Template__c/fields/cgcloud__Allow_Postdating__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Allow_Postdating__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Allow Postdating</label>
    <type>Checkbox</type>
</CustomField>