force-app/main/default/objects/cgcloud__User_Document_Template__c/fields/cgcloud__Check_Activity_Duration__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Check_Activity_Duration__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Check Activity Duration</label>
    <type>Checkbox</type>
</CustomField>