force-app/main/default/objects/cgcloud__User_Document_Template__c/fields/cgcloud__Creation_Platform__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Creation_Platform__c</fullName>
    <label>Creation Platform</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>All</fullName>
                <default>true</default>
                <label>All</label>
            </value>
            <value>
                <fullName>Mobility</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>