force-app/main/default/objects/cgcloud__User_Document_Template__c/fields/cgcloud__Max_Activity_Duration__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Max_Activity_Duration__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Max Activity Duration</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>