force-app/main/default/objects/cgcloud__User_Document_Template__c/fields/cgcloud__Sort__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Sort__c</fullName>
    <description>Position of this instance in overviews or toggles.</description>
    <label>Sort</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>