force-app/main/default/objects/cgcloud__User_Document_Template__c/fields/cgcloud__Type__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Daily Report</fullName>
                <default>true</default>
                <label>Daily Report</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>