force-app/main/default/objects/cgcloud__User_Document_Template__c/fields/cgcloud__Workflow__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Workflow__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Workflow</label>
    <referenceTo>cgcloud__Workflow__c</referenceTo>
    <relationshipName>Daily_Report_Templates</relationshipName>
    <type>Lookup</type>
</CustomField>