force-app/main/default/objects/cgcloud__User_Document_Template__c/recordTypes/cgcloud__Daily_Report.recordType-meta.xml
<RecordType>
    <fullName>cgcloud__Daily_Report</fullName>
    <active>true</active>
    <description>Record type to be used for Daily Report teamplates</description>
    <label>Daily Report</label>
</RecordType>