force-app/main/default/objects/cgcloud__User_Document_Template__c/validationRules/cgcloud__Check_Activity_Duration_Can_Not_Be_False.validationRule-meta.xml
<ValidationRule>
    <fullName>cgcloud__Check_Activity_Duration_Can_Not_Be_False</fullName>
    <active>true</active>
    <errorConditionFormula>AND(cgcloud__Mobility_Relevant__c, RecordType.DeveloperName = &apos;Daily_Report&apos;, cgcloud__Check_Activity_Duration__c)</errorConditionFormula>
    <errorMessage>The Mobility Relevant and the Check Activity Duration can&apos;t be checked at the same time.</errorMessage>
</ValidationRule>