force-app/main/default/objects/cgcloud__User_Document_Template__c/validationRules/cgcloud__Max_Activity_Duration_Check.validationRule-meta.xml
<ValidationRule>
    <fullName>cgcloud__Max_Activity_Duration_Check</fullName>
    <active>true</active>
    <errorConditionFormula>OR(cgcloud__Max_Activity_Duration__c &lt; 0, cgcloud__Max_Activity_Duration__c &gt; 24)</errorConditionFormula>
    <errorMessage>Max Activity must be a number between 0 and 24.</errorMessage>
</ValidationRule>